<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".viewModel.LoginUser"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    >

    <EditText

        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="Email address"
        android:drawableRight="@drawable/ic_baseline_email_24"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="313dp" />


    <EditText
        android:layout_below="@+id/email"
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="Password"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="313dp"
        app:passwordToggleTint="@color/teal_700"
        android:clickable="true"
        android:drawableRight="@drawable/ic_baseline_remove_red_eye_24"
        />

    <Button
        android:layout_below="@id/password"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit"
        android:backgroundTint="@color/teal_700"
        android:text="Login"
        />

    <TextView
        android:gravity="center"
        android:id="@+id/errors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_below="@+id/submit"
        />
    <RelativeLayout
        android:layout_below="@id/errors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/or_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="or Sign up"
            />
        <TextView
            android:id="@+id/registerClass"
            android:textColor="@color/purple_700"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register"
            android:paddingLeft="10dp"
            android:layout_toRightOf="@+id/or_sign_up"
            />
    </RelativeLayout>

</RelativeLayout>