<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".viewModel.RegisterUser"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    >

    <EditText

        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="Email address"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="313dp" />

    <EditText
        android:layout_below="@+id/user_email"
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="Password"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="313dp" />

    <EditText
        android:layout_below="@+id/user_password"
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="COnfirm password"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="313dp" />

    <Button
        android:layout_below="@id/confirm_password"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reg_submit"
        android:backgroundTint="@color/teal_700"
        android:text="Register"
        />

    <RelativeLayout
        android:layout_below="@id/reg_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/wrong_inputs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </RelativeLayout>

</RelativeLayout>