<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="Sign out"
        android:id="@+id/logout"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_remove_circle_outline_24"
        android:iconTint="@color/white"
        />
</menu>